Допилено отображение картинок, исправлены мелкие ошибки

--- a/vacancies/templates/vacancies/company-create.html
+++ b/vacancies/templates/vacancies/company-create.html
@@ -1,5 +1,7 @@
 {% extends 'vacancies/base.html' %}
 
+{% block title %}Создание компании - {{ block.super }}{% endblock %}
+
 {% block body %}
     <div>
         {% include 'inc/_check_messages.html' %}
