--- a/vacancies/templates/vacancies/vacancy-edit.html
+++ b/vacancies/templates/vacancies/vacancy-edit.html
@@ -1,4 +1,6 @@
 {% extends 'vacancies/base_menu.html' %}
+{% block title %} Редактирование вакансии - {{ block.super }}{% endblock %}
+
 {% block content %}
     <div class="card-body px-4 pb-4 tab-content">
         <!-- Tab -->
