--- a/vacancies/templates/vacancies/vacancy-list.html
+++ b/vacancies/templates/vacancies/vacancy-list.html
@@ -1,4 +1,5 @@
 {% extends 'vacancies/base_menu.html' %}
+{% block title %} Мои вакансии - {{ block.super }}{% endblock %}
 {% block content %}
     <div class="card-body px-4 pb-4">
         <section class="tab-pane fade show active">
