--- a/authentication/templates/authentication/base.html
+++ b/authentication/templates/authentication/base.html
@@ -2,19 +2,19 @@
 <html lang="ru">
 
 <head>
-  <title>{% block title %}DevJobs{% endblock %}</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>{% block title %}DevJobs{% endblock %}</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
-  <main class="container">
+<main class="container">
     <div class="row">
-      <div class="col-8 col-lg-4 offset-2 offset-lg-4">
-{#        {% include 'inc/_check_messages.html' %}#}
-          {% block body %}{% endblock %}
-      </div>
+        <div class="col-8 col-lg-4 offset-2 offset-lg-4">
+            {% block body %}{% endblock %}
+        </div>
     </div>
-  </main>
+</main>
 </body>
 </html>
