--- a/vacancies/templates/vacancies/base_menu.html
+++ b/vacancies/templates/vacancies/base_menu.html
@@ -1,5 +1,7 @@
 {% extends 'vacancies/base.html' %}
-
+{% block title %}
+    Профиль - {{ block.super }}
+{% endblock %}
 {% block body %}
     <main class="container mt-3 pb-5">
         <div class="row mt-5">
