--- a/vacancies/templates/vacancies/company-edit.html
+++ b/vacancies/templates/vacancies/company-edit.html
@@ -1,5 +1,7 @@
 {% extends 'vacancies/base_menu.html' %}
 
+{% block title %}Моя компания - {{ block.super }}{% endblock %}
+
 {% block content %}
     <div class="card-body px-4 pb-4">
         <section class="tab-pane fade show active">
@@ -8,7 +10,7 @@
                 {% include 'inc/_check_messages.html' %}
             </div>
             {{ form.non_field.errors }}
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-12 col-md-6">
@@ -29,8 +31,13 @@
                                    for="{{ form.logo.id_for_label }}">Логотип</label>
                             <div class="row align-items-center">
                                 <div class="col-6">
-                                    <img src="https://place-hold.it/120x40" alt=""
-                                         style="max-width: 120px;height: auto;">
+                                    {% if request.resolver_match.url_name == "edit_company" and company.logo %}
+                                        <img src="{{ company.logo.url }}" alt=""
+                                             style="max-width: 120px;height: auto;">
+                                    {% else %}
+                                        <img src="https://place-hold.it/120x40" alt=""
+                                             style="max-width: 120px;height: auto;">
+                                    {% endif %}
                                 </div>
                                 <div class="col-6" style="position: relative;">
                                     <div class="input-group-prepend"
@@ -38,8 +45,7 @@
                                         <span class="btn btn-info px-4">Загрузить</span>
                                     </div>
                                     <div class="custom-file" style="">
-                                        <input type="file" class="custom-file-input"
-                                               id="inputGroupFile01">
+                                        {{ form.logo }}
                                     </div>
                                 </div>
                             </div>
