--- a/vacancies/templates/vacancies/index.html
+++ b/vacancies/templates/vacancies/index.html
@@ -1,26 +1,30 @@
 {% extends 'vacancies/base.html' %}
 
+{% block title %}Главная - {{ block.super }}{% endblock %}
+
 {% block body %}
     <main class="container mt-3">
+        <div>
+            {% include 'inc/_check_messages.html' %}
+        </div>
         <section>
             <h1 class="h1 text-center mx-auto mt-4 py-5"><strong>Вакансии для <br>разработчиков</strong></h1>
             <div class="row">
                 <div class="col-12 col-md-8 col-lg-6 offset-lg-3 offset-md-2">
-                    <form class="form-inline mb-3">
+                    <form class="form-inline mb-3" action="{% url 'search' %}">
                         <div class="form-group col-8 col-md-10 pl-0">
                             <input class="form-control w-100" type="search" placeholder="Найти работу или стажировку"
-                                   aria-label="Найти работу или стажировку">
+                                   aria-label="Найти работу или стажировку" name="s">
                         </div>
                         <div class="form-group col-4 col-md-2 pl-0">
-                            <button class="btn btn-primary w-100" type="submit">Найти</button>
+                            <button class="btn btn-primary" type="submit">Найти</button>
                         </div>
                     </form>
                     <p>Например:
                         {% for fast_category in fast_categories %}
-                            <a href="{% url 'home' %}"
+                            <a href="{% url 'search' %}?s={{ fast_category }}"
                                class="text-dark border-bottom border-dark m-1 text-decoration-none">{{ fast_category }}</a>
                         {% endfor %}
-
                     </p>
                 </div>
             </div>
@@ -28,13 +32,13 @@
 
         <section class="mt-5 pt-3">
             <h2 class="h2 font-weight-normal text-center mb-5">Вакансии по рубрикам</h2>
-            {% include 'vacancies/inc/_item_list.html' with items=specialties %}
+            {% include 'vacancies/inc/_specialty_list.html'%}
         </section>
 
 
         <section class="my-5 pt-3">
             <h2 class="h2 font-weight-normal text-center mb-5">Нам доверяют лучшие компании</h2>
-            {% include 'vacancies/inc/_item_list.html' with items=companies %}
+            {% include 'vacancies/inc/_company_list.html'%}
         </section>
     </main>
 {% endblock %}
