--- a/vacancies/templates/vacancies/resume-edit.html
+++ b/vacancies/templates/vacancies/resume-edit.html
@@ -1,4 +1,7 @@
 {% extends 'vacancies/base.html' %}
+
+{% block title %}Мое резюме - {{ block.super }}{% endblock %}
+
 {% block body %}
     <main class="container mt-3 pb-5">
         <section class="col-12 col-lg-6 offset-lg-3 mt-5 card">
