--- a/vacancies/templates/vacancies/vacancies.html
+++ b/vacancies/templates/vacancies/vacancies.html
@@ -1,7 +1,6 @@
 {% extends 'vacancies/base.html' %}
-
-
 {% block title %}Все вакансии - {{ block.super }}{% endblock %}
+
 {% block body %}
     <div>
         {% include 'inc/_check_messages.html' %}
@@ -13,7 +12,7 @@
             <div class="row mt-5">
                 <div class="col-12 col-lg-8 offset-lg-2 m-auto">
                     {% for vacancy in vacancies %}
-                        {% include 'vacancies/inc/_vacancy_card.html' with vacancy=vacancy %}
+                        {% include 'vacancies/inc/_vacancy_card.html' %}
                     {% endfor %}
                 </div>
             </div>
